--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,4 +1,7 @@
 {
+    "study_nav_dashboard": "Dashboard",
+    "study_dashboard_overview": "Overview",
+    "study_dashboard_create": "Create",
     "study_nav_learning": "Learning",
     "study_nav_study_materials": "Study Materials",
     "study_nav_summaries": "Summaries",
