--- a/resources/lang/de.json
+++ b/resources/lang/de.json
@@ -1,4 +1,7 @@
 {
+    "study_nav_dashboard": "Dashboard",
+    "study_dashboard_overview": "Übersicht",
+    "study_dashboard_create": "Erstellen",
     "study_nav_learning": "Lernen",
     "study_nav_study_materials": "Lernmaterialien",
     "study_nav_summaries": "Zusammenfassungen",
